frontend/src/views/pages/home/index.css
#home h2 {
  text-align: center;
}

#home .archive {
  display: inline-block;
  padding: 15px 30px;
  border: solid 1px #666;
  border-radius: 30px;
  font-size: 14px;
}

#home .archive:hover {
  text-decoration: none;
  background: #555;
}

/* spotlight */
#home #spotlight {
  max-width: 100%;
  padding: 20px;
  margin-bottom: 40px;
}

#home #spotlight .container {
  position: relative;
  margin: auto;
}

#home #spotlight .slide {
  display: none;
}

#home #spotlight .image {
  display: flex;
  justify-content: center;
  align-items: start;
  overflow: hidden;
  height: 650px;
  border-radius: 15px;
}

#home #spotlight .image img {
  flex-shrink: 0;
  min-width: 100%;
  min-height: 100%;
}

#home #spotlight .cover {
  background: #444;
  display: block;
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 30px;
}

#home #spotlight .previous,
#home #spotlight .next {
  cursor: pointer;
  position: absolute;
  top: 35%;
  width: auto;
  margin-top: -22px;
  padding: 100px 40px;
  color: #fff;
  font-size: 48px;
  transition: 0.3s ease;
  border-radius: 0 5px 5px 0;
  user-select: none;
  text-decoration: none;
}

#home #spotlight .next {
  right: 0;
  border-radius: 5px 0 0 5px;
}

#home #spotlight .previous:hover,
#home #spotlight .next:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

#home #spotlight .text {
  color: #fff;
  font-size: 28px;
  padding: 20px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

#home #spotlight .dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 20px;
  padding: 5px;
  background-color: #666;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.3s ease;
}

#home #spotlight .active,
#home #spotlight .dot:hover {
  background-color: #eee;
}

/* editorial */
#home #editorial {
  max-width: 100%;
  padding: 0 20px;
  margin-bottom: 40px;
}

#home #editorial .editor {
  margin: 20px 0 0 0;
  background: #f8f8f8;
  color: #000;
  padding: 20px;
  border-radius: 15px;
}

/* latest */
#home #latest {
  max-width: 100%;
  padding: 20px;
  margin-bottom: 40px;
}

#home #latest .wrapper {
  background: #555;
  border-radius: 15px;
  padding: 20px;
}

#home #latest .title {
  color: #fff;
}

#home #latest .date {
  color: #888;
}

#home #latest .type {
  display: inline-block;
  color: #ccc;
  background: #666;
  padding: 2px 10px;
  margin-bottom: 5px;
  margin-left: 10px;
  border-radius: 5px;
  font-size: 12px;
}

#home #latest .status {
  display: inline-block;
  color: #eee;
  background: #d66;
  padding: 2px 10px;
  margin-bottom: 5px;
  border-radius: 5px;
  font-size: 12px;
}

/* highlighting */
#home .highlighting {
  max-width: 100%;
  padding: 20px;
  margin-bottom: 40px;
}

#home .highlighting .wrapper {
  background: #555;
  border-radius: 15px;
  padding: 20px;
}

#home .highlighting .title {
  color: #fff;
}

#home .highlighting .date {
  color: #888;
}

#home .highlighting .type {
  display: inline-block;
  color: #ccc;
  background: #666;
  padding: 2px 10px;
  margin-bottom: 5px;
  margin-left: 10px;
  border-radius: 5px;
  font-size: 12px;
}

#home .highlighting .status {
  display: inline-block;
  color: #eee;
  background: #d66;
  padding: 2px 10px;
  margin-bottom: 5px;
  border-radius: 5px;
  font-size: 12px;
}

